--- a/src/fabric-1.16.2/mappings/sounds.yaml
+++ b/src/fabric-1.16.2/mappings/sounds.yaml
@@ -338,132 +338,132 @@ entity.mooshroom.shear: ENTITY_MOOSHROOM_SHEAR
 entity.mule.ambient: ENTITY_MULE_AMBIENT
 entity.mule.chest: ENTITY_MULE_CHEST
 entity.mule.hurt: ENTITY_MULE_HURT
-entity.painting.break: entity.painting.break
-entity.painting.place: entity.painting.place
-entity.parrot.ambient: entity.parrot.ambient
-entity.parrot.death: entity.parrot.death
-entity.parrot.eat: entity.parrot.eat
-entity.parrot.fly: entity.parrot.fly
-entity.parrot.hurt: entity.parrot.hurt
-entity.parrot.imitate.blaze: entity.parrot.imitate.blaze
-entity.parrot.imitate.creeper: entity.parrot.imitate.creeper
-entity.parrot.imitate.elder_guardian: entity.parrot.imitate.elder_guardian
-entity.parrot.imitate.enderdragon: entity.parrot.imitate.ender_dragon
-entity.parrot.imitate.enderman: entity.parrot.imitate.endermite #LEGACY
-entity.parrot.imitate.endermite: entity.parrot.imitate.endermite
-entity.parrot.imitate.evocation_illager: entity.parrot.imitate.evoker
-entity.parrot.imitate.ghast: entity.parrot.imitate.ghast
-entity.parrot.imitate.husk: entity.parrot.imitate.husk
-entity.parrot.imitate.illusion_illager: entity.parrot.imitate.illusioner
-entity.parrot.imitate.magmacube: entity.parrot.imitate.magma_cube
-entity.parrot.imitate.polar_bear: entity.parrot.imitate.husk #LEGACY
-entity.parrot.imitate.shulker: entity.parrot.imitate.shulker
-entity.parrot.imitate.silverfish: entity.parrot.imitate.silverfish
-entity.parrot.imitate.skeleton: entity.parrot.imitate.skeleton
-entity.parrot.imitate.slime: entity.parrot.imitate.slime
-entity.parrot.imitate.spider: entity.parrot.imitate.spider
-entity.parrot.imitate.stray: entity.parrot.imitate.stray
-entity.parrot.imitate.vex: entity.parrot.imitate.vex
-entity.parrot.imitate.vindication_illager: entity.parrot.imitate.vindicator
-entity.parrot.imitate.witch: entity.parrot.imitate.witch
-entity.parrot.imitate.wither: entity.parrot.imitate.wither
-entity.parrot.imitate.wither_skeleton: entity.parrot.imitate.wither_skeleton
-entity.parrot.imitate.wolf: entity.parrot.imitate.wither #LEGACY
-entity.parrot.imitate.zombie: entity.parrot.imitate.zombie
-entity.parrot.imitate.zombie_pigman: entity.parrot.imitate.zombie #LEGACY
-entity.parrot.imitate.zombie_villager: entity.parrot.imitate.zombie_villager
-entity.parrot.step: entity.parrot.step
-entity.pig.ambient: entity.pig.ambient
-entity.pig.death: entity.pig.death
-entity.pig.hurt: entity.pig.hurt
-entity.pig.saddle: entity.pig.saddle
-entity.pig.step: entity.pig.step
-entity.player.attack.crit: entity.player.attack.crit
-entity.player.attack.knockback: entity.player.attack.knockback
-entity.player.attack.nodamage: entity.player.attack.nodamage
-entity.player.attack.strong: entity.player.attack.strong
-entity.player.attack.sweep: entity.player.attack.sweep
-entity.player.attack.weak: entity.player.attack.weak
-entity.player.big_fall: entity.player.big_fall
-entity.player.breath: entity.player.breath
-entity.player.burp: entity.player.burp
-entity.player.death: entity.player.death
-entity.player.hurt: entity.player.hurt
-entity.player.hurt_drown: entity.player.hurt_drown
-entity.player.hurt_on_fire: entity.player.hurt_on_fire
-entity.player.levelup: entity.player.levelup
-entity.player.small_fall: entity.player.small_fall
-entity.player.splash: entity.player.splash
-entity.player.swim: entity.player.swim
-entity.polar_bear.ambient: entity.polar_bear.ambient
-entity.polar_bear.baby_ambient: entity.polar_bear.ambient_baby
-entity.polar_bear.death: entity.polar_bear.death
-entity.polar_bear.hurt: entity.polar_bear.hurt
-entity.polar_bear.step: entity.polar_bear.step
-entity.polar_bear.warning: entity.polar_bear.warning
-entity.rabbit.ambient: entity.rabbit.ambient
-entity.rabbit.attack: entity.rabbit.attack
-entity.rabbit.death: entity.rabbit.death
-entity.rabbit.hurt: entity.rabbit.hurt
-entity.rabbit.jump: entity.rabbit.jump
-entity.sheep.ambient: entity.sheep.ambient
-entity.sheep.death: entity.sheep.death
-entity.sheep.hurt: entity.sheep.hurt
-entity.sheep.shear: entity.sheep.shear
-entity.sheep.step: entity.sheep.step
-entity.shulker.ambient: entity.shulker.ambient
-entity.shulker.close: entity.shulker.close
-entity.shulker.death: entity.shulker.death
-entity.shulker.hurt: entity.shulker.hurt
-entity.shulker.hurt_closed: entity.shulker.hurt_closed
-entity.shulker.open: entity.shulker.open
-entity.shulker.shoot: entity.shulker.shoot
-entity.shulker.teleport: entity.shulker.teleport
-entity.shulker_bullet.hit: entity.shulker_bullet.hit
-entity.shulker_bullet.hurt: entity.shulker_bullet.hurt
-entity.silverfish.ambient: entity.silverfish.ambient
-entity.silverfish.death: entity.silverfish.death
-entity.silverfish.hurt: entity.silverfish.hurt
-entity.silverfish.step: entity.silverfish.step
-entity.skeleton.ambient: entity.skeleton.ambient
-entity.skeleton.death: entity.skeleton.death
-entity.skeleton.hurt: entity.skeleton.hurt
-entity.skeleton.shoot: entity.skeleton.shoot
-entity.skeleton.step: entity.skeleton.step
-entity.skeleton_horse.ambient: entity.skeleton_horse.ambient
-entity.skeleton_horse.death: entity.skeleton_horse.death
-entity.skeleton_horse.hurt: entity.skeleton_horse.hurt
-entity.slime.attack: entity.slime.attack
-entity.slime.death: entity.slime.death
-entity.slime.hurt: entity.slime.hurt
-entity.slime.jump: entity.slime.jump
-entity.slime.squish: entity.slime.squish
-entity.small_magmacube.death: entity.magma_cube.death_small
-entity.small_magmacube.hurt: entity.magma_cube.hurt_small
-entity.small_magmacube.squish: entity.magma_cube.squish_small
-entity.small_slime.death: entity.slime.death_small
-entity.small_slime.hurt: entity.slime.hurt_small
-entity.small_slime.jump: entity.slime.jump_small
-entity.small_slime.squish: entity.slime.squish_small
-entity.snowball.throw: entity.snowball.throw
-entity.snowman.ambient: entity.snow_golem.ambient
-entity.snowman.death: entity.snow_golem.death
-entity.snowman.hurt: entity.snow_golem.hurt
-entity.snowman.shoot: entity.snow_golem.shoot
-entity.spider.ambient: entity.spider.ambient
-entity.spider.death: entity.spider.death
-entity.spider.hurt: entity.spider.hurt
-entity.spider.step: entity.spider.step
-entity.splash_potion.break: entity.splash_potion.break
-entity.splash_potion.throw: entity.splash_potion.throw
-entity.squid.ambient: entity.squid.ambient
-entity.squid.death: entity.squid.death
-entity.squid.hurt: entity.squid.hurt
-entity.stray.ambient: entity.stray.ambient
-entity.stray.death: entity.stray.death
-entity.stray.hurt: entity.stray.hurt
-entity.stray.step: entity.stray.step
-entity.tnt.primed: entity.tnt.primed
+entity.painting.break: ENTITY_PAINTING_BREAK
+entity.painting.place: ENTITY_PAINTING_PLACE
+entity.parrot.ambient: ENTITY_PARROT_AMBIENT
+entity.parrot.death: ENTITY_PARROT_DEATH
+entity.parrot.eat: ENTITY_PARROT_EAT
+entity.parrot.fly: ENTITY_PARROT_FLY
+entity.parrot.hurt: ENTITY_PARROT_FLY
+entity.parrot.imitate.blaze: ENTITY_PARROT_IMITATE_BLAZE
+entity.parrot.imitate.creeper: ENTITY_PARROT_IMITATE_CREEPER
+entity.parrot.imitate.elder_guardian: ENTITY_PARROT_IMITATE_ELDER_GUARDIAN
+entity.parrot.imitate.enderdragon: ENTITY_PARROT_IMITATE_ENDER_DRAGON
+entity.parrot.imitate.enderman: ENTITY_PARROT_IMITATE_ENDERMITE #LEGACY
+entity.parrot.imitate.endermite: ENTITY_PARROT_IMITATE_ENDERMITE
+entity.parrot.imitate.evocation_illager: ENTITY_PARROT_IMITATE_EVOKER
+entity.parrot.imitate.ghast: ENTITY_PARROT_IMITATE_GHAST
+entity.parrot.imitate.husk: ENTITY_PARROT_IMITATE_HUSK
+entity.parrot.imitate.illusion_illager: ENTITY_PARROT_IMITATE_ILLUSIONER
+entity.parrot.imitate.magmacube: ENTITY_PARROT_IMITATE_MAGMA_CUBE
+entity.parrot.imitate.polar_bear: ENTITY_PARROT_IMITATE_HUSK #LEGACY
+entity.parrot.imitate.shulker: ENTITY_PARROT_IMITATE_SHULKER
+entity.parrot.imitate.silverfish: ENTITY_PARROT_IMITATE_SILVERFISH
+entity.parrot.imitate.skeleton: ENTITY_PARROT_IMITATE_SKELETON
+entity.parrot.imitate.slime: ENTITY_PARROT_IMITATE_SLIME
+entity.parrot.imitate.spider: ENTITY_PARROT_IMITATE_SPIDER
+entity.parrot.imitate.stray: ENTITY_PARROT_IMITATE_STRAY
+entity.parrot.imitate.vex: ENTITY_PARROT_IMITATE_VEX
+entity.parrot.imitate.vindication_illager: ENTITY_PARROT_IMITATE_VINDICATOR
+entity.parrot.imitate.witch: ENTITY_PARROT_IMITATE_WITCH
+entity.parrot.imitate.wither: ENTITY_PARROT_IMITATE_WITHER
+entity.parrot.imitate.wither_skeleton: ENTITY_PARROT_IMITATE_WITHER_SKELETON
+entity.parrot.imitate.wolf: ENTITY_PARROT_IMITATE_WITHER #LEGACY
+entity.parrot.imitate.zombie: ENTITY_PARROT_IMITATE_ZOMBIE
+entity.parrot.imitate.zombie_pigman: ENTITY_PARROT_IMITATE_ZOMBIE #LEGACY
+entity.parrot.imitate.zombie_villager: ENTITY_PARROT_IMITATE_ZOMBIE_VILLAGER
+entity.parrot.step: ENTITY_PARROT_STEP
+entity.pig.ambient: ENTITY_PIG_AMBIENT
+entity.pig.death: ENTITY_PIG_DEATH
+entity.pig.hurt: ENTITY_PIG_HURT
+entity.pig.saddle: ENTITY_PIG_SADDLE
+entity.pig.step: ENTITY_PIG_STEP
+entity.player.attack.crit: ENTITY_PLAYER_ATTACK_CRIT
+entity.player.attack.knockback: ENTITY_PLAYER_ATTACK_KNOCKBACK
+entity.player.attack.nodamage: ENTITY_PLAYER_ATTACK_NODAMAGE
+entity.player.attack.strong: ENTITY_PLAYER_ATTACK_STRONG
+entity.player.attack.sweep: ENTITY_PLAYER_ATTACK_SWEEP
+entity.player.attack.weak: ENTITY_PLAYER_ATTACK_WEAK
+entity.player.big_fall: ENTITY_PLAYER_BIG_FALL
+entity.player.breath: ENTITY_PLAYER_BREATH
+entity.player.burp: ENTITY_PLAYER_BURP
+entity.player.death: ENTITY_PLAYER_DEATH
+entity.player.hurt: ENTITY_PLAYER_HURT
+entity.player.hurt_drown: ENTITY_PLAYER_HURT_DROWN
+entity.player.hurt_on_fire: ENTITY_PLAYER_HURT_ON_FIRE
+entity.player.levelup: ENTITY_PLAYER_LEVELUP
+entity.player.small_fall: ENTITY_PLAYER_SMALL_FALL
+entity.player.splash: ENTITY_PLAYER_SPLASH
+entity.player.swim: ENTITY_PLAYER_SWIM
+entity.polar_bear.ambient: ENTITY_POLAR_BEAR_AMBIENT
+entity.polar_bear.baby_ambient: ENTITY_POLAR_BEAR_AMBIENT_BABY
+entity.polar_bear.death: ENTITY_POLAR_BEAR_DEATH
+entity.polar_bear.hurt: ENTITY_POLAR_BEAR_HURT
+entity.polar_bear.step: ENTITY_POLAR_BEAR_STEP
+entity.polar_bear.warning: ENTITY_POLAR_BEAR_WARNING
+entity.rabbit.ambient: ENTITY_RABBIT_AMBIENT
+entity.rabbit.attack: ENTITY_RABBIT_ATTACK
+entity.rabbit.death: ENTITY_RABBIT_DEATH
+entity.rabbit.hurt: ENTITY_RABBIT_HURT
+entity.rabbit.jump: ENTITY_RABBIT_JUMP
+entity.sheep.ambient: ENTITY_SHEEP_AMBIENT
+entity.sheep.death: ENTITY_SHEEP_DEATH
+entity.sheep.hurt: ENTITY_SHEEP_HURT
+entity.sheep.shear: ENTITY_SHEEP_SHEAR
+entity.sheep.step: ENTITY_SHEEP_STEP
+entity.shulker.ambient: ENTITY_SHULKER_AMBIENT
+entity.shulker.close: ENTITY_SHULKER_CLOSE
+entity.shulker.death: ENTITY_SHULKER_DEATH
+entity.shulker.hurt: ENTITY_SHULKER_HURT
+entity.shulker.hurt_closed: ENTITY_SHULKER_HURT_CLOSED
+entity.shulker.open: ENTITY_SHULKER_OPEN
+entity.shulker.shoot: ENTITY_SHULKER_SHOOT
+entity.shulker.teleport: ENTITY_SHULKER_TELEPORT
+entity.shulker_bullet.hit: ENTITY_SHULKER_BULLET_HIT
+entity.shulker_bullet.hurt: ENTITY_SHULKER_BULLET_HURT
+entity.silverfish.ambient: ENTITY_SILVERFISH_AMBIENT
+entity.silverfish.death: ENTITY_SILVERFISH_DEATH
+entity.silverfish.hurt: ENTITY_SILVERFISH_HURT
+entity.silverfish.step: ENTITY_SILVERFISH_STEP
+entity.skeleton.ambient: ENTITY_SKELETON_AMBIENT
+entity.skeleton.death: ENTITY_SKELETON_DEATH
+entity.skeleton.hurt: ENTITY_SKELETON_HURT
+entity.skeleton.shoot: ENTITY_SKELETON_SHOOT
+entity.skeleton.step: ENTITY_SKELETON_STEP
+entity.skeleton_horse.ambient: ENTITY_SKELETON_HORSE_AMBIENT
+entity.skeleton_horse.death: ENTITY_SKELETON_HORSE_DEATH
+entity.skeleton_horse.hurt: ENTITY_SKELETON_HORSE_HURT
+entity.slime.attack: ENTITY_SLIME_ATTACK
+entity.slime.death: ENTITY_SLIME_DEATH
+entity.slime.hurt: ENTITY_SLIME_HURT
+entity.slime.jump: ENTITY_SLIME_JUMP
+entity.slime.squish: ENTITY_SLIME_SQUISH
+entity.small_magmacube.death: ENTITY_MAGMA_CUBE_DEATH
+entity.small_magmacube.hurt: ENTITY_MAGMA_CUBE_HURT
+entity.small_magmacube.squish: ENTITY_MAGMA_CUBE_SQUISH_SMALL
+entity.small_slime.death: ENTITY_MAGMA_CUBE_DEATH_SMALL
+entity.small_slime.hurt: ENTITY_MAGMA_CUBE_HURT_SMALL
+entity.small_slime.jump: ENTITY_SLIME_JUMP_SMALL
+entity.small_slime.squish: ENTITY_SLIME_SQUISH
+entity.snowball.throw: ENTITY_SNOWBALL_THROW
+entity.snowman.ambient: ENTITY_SNOW_GOLEM_AMBIENT
+entity.snowman.death: ENTITY_SNOW_GOLEM_DEATH
+entity.snowman.hurt: ENTITY_SNOW_GOLEM_HURT
+entity.snowman.shoot: ENTITY_SNOW_GOLEM_SHOOT
+entity.spider.ambient: ENTITY_SPIDER_AMBIENT
+entity.spider.death: ENTITY_SPIDER_DEATH
+entity.spider.hurt: ENTITY_SPIDER_HURT
+entity.spider.step: ENTITY_SPIDER_STEP
+entity.splash_potion.break: ENTITY_SPLASH_POTION_BREAK
+entity.splash_potion.throw: ENTITY_SPLASH_POTION_THROW
+entity.squid.ambient: ENTITY_SQUID_AMBIENT
+entity.squid.death: ENTITY_SQUID_DEATH
+entity.squid.hurt: ENTITY_SQUID_HURT
+entity.stray.ambient: ENTITY_STRAY_AMBIENT
+entity.stray.death: ENTITY_STRAY_DEATH
+entity.stray.hurt: ENTITY_STRAY_HURT
+entity.stray.step: ENTITY_STRAY_STEP
+entity.tnt.primed: ENTITY_TNT_PRIMED
 entity.vex.ambient: entity.vex.ambient
 entity.vex.charge: entity.vex.charge
 entity.vex.death: entity.vex.death
