--- a/src/fabric-1.16.2/mappings/sounds.yaml
+++ b/src/fabric-1.16.2/mappings/sounds.yaml
@@ -464,64 +464,64 @@ entity.stray.death: ENTITY_STRAY_DEATH
 entity.stray.hurt: ENTITY_STRAY_HURT
 entity.stray.step: ENTITY_STRAY_STEP
 entity.tnt.primed: ENTITY_TNT_PRIMED
-entity.vex.ambient: entity.vex.ambient
-entity.vex.charge: entity.vex.charge
-entity.vex.death: entity.vex.death
-entity.vex.hurt: entity.vex.hurt
-entity.villager.ambient: entity.villager.ambient
-entity.villager.death: entity.villager.death
-entity.villager.hurt: entity.villager.hurt
-entity.villager.no: entity.villager.no
-entity.villager.trading: entity.villager.trade
-entity.villager.yes: entity.villager.yes
-entity.vindication_illager.ambient: entity.vindicator.ambient
-entity.vindication_illager.death: entity.vindicator.death
-entity.vindication_illager.hurt: entity.vindicator.hurt
-entity.witch.ambient: entity.witch.ambient
-entity.witch.death: entity.witch.death
-entity.witch.drink: entity.witch.drink
-entity.witch.hurt: entity.witch.hurt
-entity.witch.throw: entity.witch.throw
-entity.wither.ambient: entity.wither.ambient
-entity.wither.break_block: entity.wither.break_block
-entity.wither.death: entity.wither.death
-entity.wither.hurt: entity.wither.hurt
-entity.wither.shoot: entity.wither.shoot
-entity.wither.spawn: entity.wither.spawn
-entity.wither_skeleton.ambient: entity.wither_skeleton.ambient
-entity.wither_skeleton.death: entity.wither_skeleton.death
-entity.wither_skeleton.hurt: entity.wither_skeleton.hurt
-entity.wither_skeleton.step: entity.wither_skeleton.step
-entity.wolf.ambient: entity.wolf.ambient
-entity.wolf.death: entity.wolf.death
-entity.wolf.growl: entity.wolf.growl
-entity.wolf.howl: entity.wolf.howl
-entity.wolf.hurt: entity.wolf.hurt
-entity.wolf.pant: entity.wolf.pant
-entity.wolf.shake: entity.wolf.shake
-entity.wolf.step: entity.wolf.step
-entity.wolf.whine: entity.wolf.whine
-entity.zombie.ambient: entity.zombie.ambient
-entity.zombie.attack_door_wood: entity.zombie.attack_wooden_door
-entity.zombie.attack_iron_door: entity.zombie.attack_iron_door
-entity.zombie.break_door_wood: entity.zombie.break_wooden_door
-entity.zombie.death: entity.zombie.death
-entity.zombie.hurt: entity.zombie.hurt
-entity.zombie.infect: entity.zombie.infect
-entity.zombie.step: entity.zombie.step
-entity.zombie_horse.ambient: entity.zombie_horse.ambient
-entity.zombie_horse.death: entity.zombie_horse.death
-entity.zombie_horse.hurt: entity.zombie_horse.hurt
-entity.zombie_pig.ambient: entity.zombie_pigman.ambient
-entity.zombie_pig.angry: entity.zombie_pigman.angry
-entity.zombie_pig.death: entity.zombie_pigman.death
-entity.zombie_pig.hurt: entity.zombie_pigman.hurt
-entity.zombie_villager.ambient: entity.zombie_villager.ambient
-entity.zombie_villager.converted: entity.zombie_villager.converted
-entity.zombie_villager.cure: entity.zombie_villager.cure
-entity.zombie_villager.death: entity.zombie_villager.death
-entity.zombie_villager.hurt: entity.zombie_villager.hurt
-entity.zombie_villager.step: entity.zombie_villager.step
+entity.vex.ambient: ENTITY_VEX_AMBIENT
+entity.vex.charge: ENTITY_VEX_CHARGE
+entity.vex.death: ENTITY_VEX_DEATH
+entity.vex.hurt: ENTITY_VEX_HURT
+entity.villager.ambient: ENTITY_VILLAGER_AMBIENT
+entity.villager.death: ENTITY_VILLAGER_DEATH
+entity.villager.hurt: ENTITY_VILLAGER_HURT
+entity.villager.no: ENTITY_VILLAGER_NO
+entity.villager.trading: ENTITY_VILLAGER_TRADE
+entity.villager.yes: ENTITY_VILLAGER_YES
+entity.vindication_illager.ambient: ENTITY_VINDICATOR_AMBIENT
+entity.vindication_illager.death: ENTITY_VINDICATOR_DEATH
+entity.vindication_illager.hurt: ENTITY_VINDICATOR_HURT
+entity.witch.ambient: ENTITY_WITCH_AMBIENT
+entity.witch.death: ENTITY_WITCH_DEATH
+entity.witch.drink: ENTITY_WITCH_DRINK
+entity.witch.hurt: ENTITY_WITHER_HURT
+entity.witch.throw: ENTITY_WITCH_THROW
+entity.wither.ambient: ENTITY_WITHER_AMBIENT
+entity.wither.break_block: ENTITY_WITHER_BREAK_BLOCK
+entity.wither.death: ENTITY_WITHER_DEATH
+entity.wither.hurt: ENTITY_WITHER_HURT
+entity.wither.shoot: ENTITY_WITHER_SHOOT
+entity.wither.spawn: ENTITY_WITHER_SPAWN
+entity.wither_skeleton.ambient: ENTITY_WITHER_SKELETON_AMBIENT
+entity.wither_skeleton.death: ENTITY_WITHER_SKELETON_DEATH
+entity.wither_skeleton.hurt: ENTITY_WITHER_SKELETON_HURT
+entity.wither_skeleton.step: ENTITY_WITHER_SKELETON_STEP
+entity.wolf.ambient: ENTITY_WOLF_AMBIENT
+entity.wolf.death: ENTITY_WOLF_DEATH
+entity.wolf.growl: ENTITY_WOLF_GROWL
+entity.wolf.howl: ENTITY_WOLF_HOWL
+entity.wolf.hurt: ENTITY_WOLF_HURT
+entity.wolf.pant: ENTITY_WOLF_PANT
+entity.wolf.shake: ENTITY_WOLF_SHAKE
+entity.wolf.step: ENTITY_WOLF_STEP
+entity.wolf.whine: ENTITY_WOLF_WHINE
+entity.zombie.ambient: ENTITY_ZOMBIE_AMBIENT
+entity.zombie.attack_door_wood: ENTITY_ZOMBIE_ATTACK_WOODEN_DOOR
+entity.zombie.attack_iron_door: ENTITY_ZOMBIE_ATTACK_IRON_DOOR
+entity.zombie.break_door_wood: ENTITY_ZOMBIE_BREAK_WOODEN_DOOR
+entity.zombie.death: ENTITY_ZOMBIE_DEATH
+entity.zombie.hurt: ENTITY_ZOMBIE_HURT
+entity.zombie.infect: ENTITY_ZOMBIE_INFECT
+entity.zombie.step: ENTITY_ZOMBIE_STEP
+entity.zombie_horse.ambient: ENTITY_ZOMBIE_HORSE_AMBIENT
+entity.zombie_horse.death: ENTITY_ZOMBIE_HORSE_DEATH
+entity.zombie_horse.hurt: ENTITY_ZOMBIE_HORSE_HURT
+entity.zombie_pig.ambient: ENTITY_ZOMBIFIED_PIGLIN_AMBIENT
+entity.zombie_pig.angry: ENTITY_ZOMBIFIED_PIGLIN_ANGRY
+entity.zombie_pig.death: ENTITY_ZOMBIFIED_PIGLIN_DEATH
+entity.zombie_pig.hurt: ENTITY_ZOMBIFIED_PIGLIN_HURT
+entity.zombie_villager.ambient: ENTITY_ZOMBIE_VILLAGER_AMBIENT
+entity.zombie_villager.converted: ENTITY_ZOMBIE_VILLAGER_CONVERTED
+entity.zombie_villager.cure: ENTITY_ZOMBIE_VILLAGER_CURE
+entity.zombie_villager.death: ENTITY_ZOMBIE_VILLAGER_DEATH
+entity.zombie_villager.hurt: ENTITY_ZOMBIE_VILLAGER_HURT
+entity.zombie_villager.step: ENTITY_ZOMBIE_VILLAGER_STEP
 item.bottle.empty: item.bottle.empty
 item.bottle.fill: item.bottle.fill
 item.bottle.fill_dragonbreath: item.bottle.fill_dragonbreath
