--- a/src/fabric-1.16.2/mappings/sounds.yaml
+++ b/src/fabric-1.16.2/mappings/sounds.yaml
@@ -522,151 +522,151 @@ entity.zombie_villager.cure: ENTITY_ZOMBIE_VILLAGER_CURE
 entity.zombie_villager.death: ENTITY_ZOMBIE_VILLAGER_DEATH
 entity.zombie_villager.hurt: ENTITY_ZOMBIE_VILLAGER_HURT
 entity.zombie_villager.step: ENTITY_ZOMBIE_VILLAGER_STEP
-item.bottle.empty: item.bottle.empty
-item.bottle.fill: item.bottle.fill
-item.bottle.fill_dragonbreath: item.bottle.fill_dragonbreath
-item.bucket.empty: item.bucket.empty
-item.bucket.empty_lava: item.bucket.empty_lava
-item.bucket.fill: item.bucket.fill
-item.bucket.fill_lava: item.bucket.fill_lava
-item.chorus_fruit.teleport: item.chorus_fruit.teleport
-item.elytra.flying: item.elytra.flying
-item.firecharge.use: item.firecharge.use
-item.flintandsteel.use: item.flintandsteel.use
-item.hoe.till: item.hoe.till
-item.shield.block: item.shield.block
-item.shield.break: item.shield.break
-item.shovel.flatten: item.shovel.flatten
-item.totem.use: item.totem.use
-music.creative: music.creative
-music.credits: music.credits
-music.dragon: music.dragon
-music.end: music.end
-music.game: music.game
-music.menu: music.menu
-music.nether: music.nether
-record.11: music_disc.11
-record.13: music_disc.13
-record.blocks: music_disc.blocks
-record.cat: music_disc.cat
-record.chirp: music_disc.chirp
-record.far: music_disc.far
-record.mall: music_disc.mall
-record.mellohi: music_disc.mellohi
-record.stal: music_disc.stal
-record.strad: music_disc.strad
-record.wait: music_disc.wait
-record.ward: music_disc.ward
-ui.button.click: ui.button.click
-ui.toast.in: ui.toast.in
-ui.toast.out: ui.toast.out
-ui.toast.challenge_complete: ui.toast.challenge_complete
-weather.rain: weather.rain
-weather.rain.above: weather.rain.above
-item.axe.strip: item.axe.strip
-block.bamboo.break: block.bamboo.break
-block.bamboo.fall: block.bamboo.fall
-block.bamboo.hit: block.bamboo.hit
-block.bamboo.place: block.bamboo.place
-block.bamboo.step: block.bamboo.step
-block.bamboo_sapling.break: block.bamboo_sapling.break
-block.bamboo_sapling.hit: block.bamboo_sapling.hit
-block.bamboo_sapling.place: block.bamboo_sapling.place
-block.barrel.close: block.barrel.close
-block.barrel.open: block.barrel.open
-block.beacon.activate: block.beacon.activate
-block.beacon.ambient: block.beacon.ambient
-block.beacon.deactivate: block.beacon.deactivate
-block.beacon.power_select: block.beacon.power_select
-block.bell.use: block.bell.use
-block.bell.resonate: block.bell.resonate
-item.book.page_turn: item.book.page_turn
-item.book.put: item.book.put
-block.blastfurnace.fire_crackle: block.blastfurnace.fire_crackle
-block.bubble_column.bubble_pop: block.bubble_column.bubble_pop
-block.bubble_column.upwards_ambient: block.bubble_column.upwards_ambient
-block.bubble_column.upwards_inside: block.bubble_column.upwards_inside
-block.bubble_column.whirlpool_ambient: block.bubble_column.whirlpool_ambient
-block.bubble_column.whirlpool_inside: block.bubble_column.whirlpool_inside
-item.bucket.empty_fish: item.bucket.empty_fish
-item.bucket.fill_fish: item.bucket.fill_fish
-block.campfire.crackle: block.campfire.crackle
-entity.cat.stray_ambient: entity.cat.stray_ambient
-entity.cat.eat: entity.cat.eat
-entity.cat.beg_for_food: entity.cat.beg_for_food
-entity.cod.ambient: entity.cod.ambient
-entity.cod.death: entity.cod.death
-entity.cod.flop: entity.cod.flop
-entity.cod.hurt: entity.cod.hurt
-block.composter.empty: block.composter.empty
-block.composter.fill: block.composter.fill
-block.composter.fill_success: block.composter.fill_success
-block.composter.ready: block.composter.ready
-block.conduit.activate: block.conduit.activate
-block.conduit.ambient: block.conduit.ambient
-block.conduit.ambient.short: block.conduit.ambient.short
-block.conduit.attack.target: block.conduit.attack.target
-block.conduit.deactivate: block.conduit.deactivate
-block.crop.break: block.crop.break
-item.crop.plant: item.crop.plant
-item.crossbow.hit: item.crossbow.hit
-item.crossbow.loading_end: item.crossbow.loading_end
-item.crossbow.loading_middle: item.crossbow.loading_middle
-item.crossbow.loading_start: item.crossbow.loading_start
-item.crossbow.quick_charge_1: item.crossbow.quick_charge_1
-item.crossbow.quick_charge_2: item.crossbow.quick_charge_2
-item.crossbow.quick_charge_3: item.crossbow.quick_charge_3
-item.crossbow.shoot: item.crossbow.shoot
-entity.dolphin.ambient: entity.dolphin.ambient
-entity.dolphin.ambient_water: entity.dolphin.ambient_water
-entity.dolphin.attack: entity.dolphin.attack
-entity.dolphin.death: entity.dolphin.death
-entity.dolphin.eat: entity.dolphin.eat
-entity.dolphin.hurt: entity.dolphin.hurt
-entity.dolphin.jump: entity.dolphin.jump
-entity.dolphin.play: entity.dolphin.play
-entity.dolphin.splash: entity.dolphin.splash
-entity.dolphin.swim: entity.dolphin.swim
-entity.drowned.ambient: entity.drowned.ambient
-entity.drowned.ambient_water: entity.drowned.ambient_water
-entity.drowned.death: entity.drowned.death
-entity.drowned.death_water: entity.drowned.death_water
-entity.drowned.hurt: entity.drowned.hurt
-entity.drowned.hurt_water: entity.drowned.hurt_water
-entity.drowned.shoot: entity.drowned.shoot
-entity.drowned.step: entity.drowned.step
-entity.drowned.swim: entity.drowned.swim
-entity.fish.swim: entity.fish.swim
-entity.fox.aggro: entity.fox.aggro
-entity.fox.ambient: entity.fox.ambient
-entity.fox.bite: entity.fox.bite
-entity.fox.death: entity.fox.death
-entity.fox.eat: entity.fox.eat
-entity.fox.hurt: entity.fox.hurt
-entity.fox.screech: entity.fox.screech
-entity.fox.sleep: entity.fox.sleep
-entity.fox.sniff: entity.fox.sniff
-entity.fox.spit: entity.fox.spit
-block.wet_grass.break: block.wet_grass.break
-block.wet_grass.fall: block.wet_grass.fall
-block.wet_grass.hit: block.wet_grass.hit
-block.wet_grass.place: block.wet_grass.place
-block.wet_grass.step: block.wet_grass.step
-block.coral_block.break: block.coral_block.break
-block.coral_block.fall: block.coral_block.fall
-block.coral_block.hit: block.coral_block.hit
-block.coral_block.place: block.coral_block.place
-block.coral_block.step: block.coral_block.step
-block.grindstone.use: block.grindstone.use
-entity.husk.converted_to_zombie: entity.husk.converted_to_zombie
-entity.ravager.ambient: entity.ravager.ambient
-entity.ravager.attack: entity.ravager.attack
-entity.ravager.celebrate: entity.ravager.celebrate
-entity.ravager.death: entity.ravager.death
-entity.ravager.hurt: entity.ravager.hurt
-entity.ravager.step: entity.ravager.step
-entity.ravager.stunned: entity.ravager.stunned
-entity.ravager.roar: entity.ravager.roar
+item.bottle.empty: ITEM_BOTTLE_EMPTY
+item.bottle.fill: ITEM_BOTTLE_FILL
+item.bottle.fill_dragonbreath: ITEM_BOTTLE_FILL_DRAGONBREATH
+item.bucket.empty: ITEM_BUCKET_EMPTY
+item.bucket.empty_lava: ITEM_BUCKET_EMPTY_LAVA
+item.bucket.fill: ITEM_BUCKET_FILL
+item.bucket.fill_lava: ITEM_BUCKET_FILL_LAVA
+item.chorus_fruit.teleport: ITEM_CHORUS_FRUIT_TELEPORT
+item.elytra.flying: ITEM_ELYTRA_FLYING
+item.firecharge.use: ITEM_FIRECHARGE_USE
+item.flintandsteel.use: ITEM_FLINTANDSTEEL_USE
+item.hoe.till: ITEM_HOE_TILL
+item.shield.block: ITEM_SHIELD_BLOCK
+item.shield.break: ITEM_SHIELD_BREAK
+item.shovel.flatten: ITEM_SHOVEL_FLATTEN
+item.totem.use: ITEM_TOTEM_USE
+music.creative: MUSIC_CREATIVE
+music.credits: MUSIC_CREDITS
+music.dragon: MUSIC_DRAGON
+music.end: MUSIC_END
+music.game: MUSIC_GAME
+music.menu: MUSIC_MENU
+music.nether: MUSIC_NETHER_NETHER_WASTES #LEGACY
+record.11: MUSIC_DISC_11
+record.13: MUSIC_DISC_13
+record.blocks: MUSIC_DISC_BLOCKS
+record.cat: MUSIC_DISC_CAT
+record.chirp: MUSIC_DISC_CHIRP
+record.far: MUSIC_DISC_FAR
+record.mall: MUSIC_DISC_MALL
+record.mellohi: MUSIC_DISC_MELLOHI
+record.stal: MUSIC_DISC_STAL
+record.strad: MUSIC_DISC_STRAD
+record.wait: MUSIC_DISC_WAIT
+record.ward: MUSIC_DISC_WARD
+ui.button.click: UI_BUTTON_CLICK
+ui.toast.in: UI_TOAST_IN
+ui.toast.out: UI_TOAST_OUT
+ui.toast.challenge_complete: UI_TOAST_CHALLENGE_COMPLETE
+weather.rain: WEATHER_RAIN
+weather.rain.above: WEATHER_RAIN_ABOVE
+item.axe.strip: ITEM_AXE_STRIP
+block.bamboo.break: BLOCK_BAMBOO_BREAK
+block.bamboo.fall: BLOCK_BAMBOO_FALL
+block.bamboo.hit: BLOCK_BAMBOO_HIT
+block.bamboo.place: BLOCK_BAMBOO_PLACE
+block.bamboo.step: BLOCK_BAMBOO_STEP
+block.bamboo_sapling.break: BLOCK_BAMBOO_SAPLING_BREAK
+block.bamboo_sapling.hit: BLOCK_BAMBOO_SAPLING_HIT
+block.bamboo_sapling.place: BLOCK_BAMBOO_SAPLING_PLACE
+block.barrel.close: BLOCK_BARREL_CLOSE
+block.barrel.open: BLOCK_BARREL_OPEN
+block.beacon.activate: BLOCK_BEACON_ACTIVATE
+block.beacon.ambient: BLOCK_BEACON_AMBIENT
+block.beacon.deactivate: BLOCK_BEACON_DEACTIVATE
+block.beacon.power_select: BLOCK_BEACON_POWER_SELECT
+block.bell.use: BLOCK_BELL_USE
+block.bell.resonate: BLOCK_BELL_RESONATE
+item.book.page_turn: ITEM_BOOK_PAGE_TURN
+item.book.put: ITEM_BOOK_PUT
+block.blastfurnace.fire_crackle: BLOCK_BLASTFURNACE_FIRE_CRACKLE
+block.bubble_column.bubble_pop: BLOCK_BUBBLE_COLUMN_BUBBLE_POP
+block.bubble_column.upwards_ambient: BLOCK_BUBBLE_COLUMN_UPWARDS_AMBIENT
+block.bubble_column.upwards_inside: BLOCK_BUBBLE_COLUMN_UPWARDS_INSIDE
+block.bubble_column.whirlpool_ambient: BLOCK_BUBBLE_COLUMN_WHIRLPOOL_AMBIENT
+block.bubble_column.whirlpool_inside: BLOCK_BUBBLE_COLUMN_WHIRLPOOL_INSIDE
+item.bucket.empty_fish: ITEM_BUCKET_EMPTY_FISH
+item.bucket.fill_fish: ITEM_BUCKET_FILL_FISH
+block.campfire.crackle: BLOCK_CAMPFIRE_CRACKLE
+entity.cat.stray_ambient: ENTITY_CAT_STRAY_AMBIENT
+entity.cat.eat: ENTITY_CAT_EAT
+entity.cat.beg_for_food: ENTITY_CAT_BEG_FOR_FOOD
+entity.cod.ambient: ENTITY_COD_AMBIENT
+entity.cod.death: ENTITY_COD_DEATH
+entity.cod.flop: ENTITY_COD_FLOP
+entity.cod.hurt: ENTITY_COD_HURT
+block.composter.empty: BLOCK_COMPOSTER_EMPTY
+block.composter.fill: BLOCK_COMPOSTER_FILL
+block.composter.fill_success: BLOCK_COMPOSTER_FILL_SUCCESS
+block.composter.ready: BLOCK_COMPOSTER_READY
+block.conduit.activate: BLOCK_CONDUIT_ACTIVATE
+block.conduit.ambient: BLOCK_CONDUIT_AMBIENT
+block.conduit.ambient.short: BLOCK_CONDUIT_AMBIENT_SHORT
+block.conduit.attack.target: BLOCK_CONDUIT_ATTACK_TARGET
+block.conduit.deactivate: BLOCK_CONDUIT_DEACTIVATE
+block.crop.break: BLOCK_CROP_BREAK
+item.crop.plant: ITEM_CROP_PLANT
+item.crossbow.hit: ITEM_CROSSBOW_HIT
+item.crossbow.loading_end: ITEM_CROSSBOW_LOADING_END
+item.crossbow.loading_middle: ITEM_CROSSBOW_LOADING_MIDDLE
+item.crossbow.loading_start: ITEM_CROSSBOW_LOADING_START
+item.crossbow.quick_charge_1: ITEM_CROSSBOW_QUICK_CHARGE_1
+item.crossbow.quick_charge_2: ITEM_CROSSBOW_QUICK_CHARGE_2
+item.crossbow.quick_charge_3: ITEM_CROSSBOW_QUICK_CHARGE_3
+item.crossbow.shoot: ITEM_CROSSBOW_SHOOT
+entity.dolphin.ambient: ENTITY_DOLPHIN_AMBIENT
+entity.dolphin.ambient_water: ENTITY_DOLPHIN_AMBIENT_WATER
+entity.dolphin.attack: ENTITY_DOLPHIN_ATTACK
+entity.dolphin.death: ENTITY_DOLPHIN_DEATH
+entity.dolphin.eat: ENTITY_DOLPHIN_EAT
+entity.dolphin.hurt: ENTITY_DOLPHIN_HURT
+entity.dolphin.jump: ENTITY_DOLPHIN_JUMP
+entity.dolphin.play: ENTITY_DOLPHIN_PLAY
+entity.dolphin.splash: ENTITY_DOLPHIN_SPLASH
+entity.dolphin.swim: ENTITY_DOLPHIN_SWIM
+entity.drowned.ambient: ENTITY_DROWNED_AMBIENT
+entity.drowned.ambient_water: ENTITY_DROWNED_AMBIENT_WATER
+entity.drowned.death: ENTITY_DROWNED_DEATH
+entity.drowned.death_water: ENTITY_DROWNED_DEATH_WATER
+entity.drowned.hurt: ENTITY_DROWNED_HURT
+entity.drowned.hurt_water: ENTITY_DROWNED_HURT_WATER
+entity.drowned.shoot: ENTITY_DROWNED_SHOOT
+entity.drowned.step: ENTITY_DROWNED_STEP
+entity.drowned.swim: ENTITY_DROWNED_SWIM
+entity.fish.swim: ENTITY_FISH_SWIM
+entity.fox.aggro: ENTITY_FOX_AGGRO
+entity.fox.ambient: ENTITY_FOX_AMBIENT
+entity.fox.bite: ENTITY_FOX_BITE
+entity.fox.death: ENTITY_FOX_DEATH
+entity.fox.eat: ENTITY_FOX_EAT
+entity.fox.hurt: ENTITY_FOX_HURT
+entity.fox.screech: ENTITY_FOX_SCREECH
+entity.fox.sleep: ENTITY_FOX_SLEEP
+entity.fox.sniff: ENTITY_FOX_SNIFF
+entity.fox.spit: ENTITY_FOX_SPIT
+block.wet_grass.break: BLOCK_WET_GRASS_BREAK
+block.wet_grass.fall: BLOCK_WET_GRASS_FALL
+block.wet_grass.hit: BLOCK_WET_GRASS_HIT
+block.wet_grass.place: BLOCK_WET_GRASS_PLACE
+block.wet_grass.step: BLOCK_WET_GRASS_STEP
+block.coral_block.break: BLOCK_CORAL_BLOCK_BREAK
+block.coral_block.fall: BLOCK_CORAL_BLOCK_FALL
+block.coral_block.hit: BLOCK_CORAL_BLOCK_HIT
+block.coral_block.place: BLOCK_CORAL_BLOCK_PLACE
+block.coral_block.step: BLOCK_ROOTS_STEP
+block.grindstone.use: BLOCK_GRINDSTONE_USE
+entity.husk.converted_to_zombie: ENTITY_HUSK_CONVERTED_TO_ZOMBIE
+entity.ravager.ambient: ENTITY_RAVAGER_AMBIENT
+entity.ravager.attack: ENTITY_RAVAGER_ATTACK
+entity.ravager.celebrate: ENTITY_RAVAGER_CELEBRATE
+entity.ravager.death: ENTITY_RAVAGER_DEATH
+entity.ravager.hurt: ENTITY_RAVAGER_HURT
+entity.ravager.step: ENTITY_RAVAGER_STEP
+entity.ravager.stunned: ENTITY_RAVAGER_STUNNED
+entity.ravager.roar: ENTITY_RAVAGER_ROAR
 block.lantern.break: block.lantern.break
 block.lantern.fall: block.lantern.fall
 block.lantern.hit: block.lantern.hit
